--- a/.harnessNGPipeAutocXAokx5uuZfilePath.yaml
+++ b/.harnessNGPipeAutocXAokx5uuZfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutocXAokx5uuZ
-  tags: {}
   name: NGPipeAutocXAokx5uuZ
-  type: PreProduction
+  identifier: NGPipeAutocXAokx5uuZ
+  tags: {
+    }
+  type: Production
