--- a/.harnessNGPipeAutokT4HvRVVGWfilePath.yaml
+++ b/.harnessNGPipeAutokT4HvRVVGWfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutokT4HvRVVGW
-  tags: {}
   name: NGPipeAutokT4HvRVVGW
-  type: PreProduction
+  identifier: NGPipeAutokT4HvRVVGW
+  tags: {
+    }
+  type: Production
