--- a/.harnessNGPipeAuto2XlwST5niMfilePath.yaml
+++ b/.harnessNGPipeAuto2XlwST5niMfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto2XlwST5niM
-  tags: {}
   name: NGPipeAuto2XlwST5niM
-  type: PreProduction
+  identifier: NGPipeAuto2XlwST5niM
+  tags: {
+    }
+  type: Production
