--- a/.harnessNGPipeAutok76AG6MjVsfilePath.yaml
+++ b/.harnessNGPipeAutok76AG6MjVsfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutok76AG6MjVs
-  tags: {}
   name: NGPipeAutok76AG6MjVs
-  type: PreProduction
+  identifier: NGPipeAutok76AG6MjVs
+  tags: {
+    }
+  type: Production
