--- a/.harnessNGPipeAutout8DJQQY2ZfilePath.yaml
+++ b/.harnessNGPipeAutout8DJQQY2ZfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutout8DJQQY2Z
-  tags: {}
   name: NGPipeAutout8DJQQY2Z
-  type: PreProduction
+  identifier: NGPipeAutout8DJQQY2Z
+  tags: {
+    }
+  type: Production
