--- a/.harnessNGPipeAutoPHMDjoK05xfilePath.yaml
+++ b/.harnessNGPipeAutoPHMDjoK05xfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPHMDjoK05x
-  tags: {}
   name: NGPipeAutoPHMDjoK05x
-  type: PreProduction
+  identifier: NGPipeAutoPHMDjoK05x
+  tags: {
+    }
+  type: Production
