--- a/.harness/testRemote/pl_auto_environment_Msp2M.yaml
+++ b/.harness/testRemote/pl_auto_environment_Msp2M.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_Msp2M
   tags: {}
   name: pl_auto_environment_Msp2M
-  type: PreProduction
+  type: Invalid
