a new commit message

--- a/.harness/testRemote/pl_auto_pipeline_fPL7k.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_fPL7k.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_fPL7k
-  identifier: pl_auto_pipeline_fPL7k
+unknown:
+  name: pl_auto_unknown_fPL7k
+  identifier: pl_auto_unknown_fPL7k
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
