--- a/.harness/testRemote/pl_auto_environment_phQFe.yaml
+++ b/.harness/testRemote/pl_auto_environment_phQFe.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_phQFe
   tags: {}
   name: pl_auto_environment_phQFe
-  type: PreProduction
+  type: Invalid
