a new commit message

--- a/.harness/testRemote/pl_auto_environment_gSded.yaml
+++ b/.harness/testRemote/pl_auto_environment_gSded.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_gSded
   tags: {}
   name: pl_auto_environment_gSded
-  type: PreProduction
+  type: Invalid
