a new commit message

--- a/.harness/testRemote/pl_auto_pipeline_wUFnU.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_wUFnU.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_wUFnU
-  identifier: pl_auto_pipeline_wUFnU
+unknown:
+  name: pl_auto_unknown_wUFnU
+  identifier: pl_auto_unknown_wUFnU
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
