--- a/.harnessNGPipeAutoYNpzIE9G8PfilePath.yaml
+++ b/.harnessNGPipeAutoYNpzIE9G8PfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoYNpzIE9G8P
-  tags: {}
   name: NGPipeAutoYNpzIE9G8P
-  type: PreProduction
+  identifier: NGPipeAutoYNpzIE9G8P
+  tags: {
+    }
+  type: Production
