--- a/.harnessNGPipeAutoXIV85IBDmwfilePath.yaml
+++ b/.harnessNGPipeAutoXIV85IBDmwfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoXIV85IBDmw
-  tags: {}
   name: NGPipeAutoXIV85IBDmw
-  type: PreProduction
+  identifier: NGPipeAutoXIV85IBDmw
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
