--- a/.harnessNGPipeAutoiF3FcZPkDsfilePath.yaml
+++ b/.harnessNGPipeAutoiF3FcZPkDsfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoiF3FcZPkDs
-  tags: {}
   name: NGPipeAutoiF3FcZPkDs
-  type: PreProduction
+  identifier: NGPipeAutoiF3FcZPkDs
+  tags: {
+    }
+  type: Production
