--- a/.harnessNGPipeAutoTS2Sj98ITEfilePath.yaml
+++ b/.harnessNGPipeAutoTS2Sj98ITEfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoTS2Sj98ITE
-  tags: {}
   name: NGPipeAutoTS2Sj98ITE
-  type: PreProduction
+  identifier: NGPipeAutoTS2Sj98ITE
+  tags: {
+    }
+  type: Production
