--- a/.harnessNGPipeAuto7nvVVIIqiQfilePath.yaml
+++ b/.harnessNGPipeAuto7nvVVIIqiQfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto7nvVVIIqiQ
-  tags: {}
   name: NGPipeAuto7nvVVIIqiQ
-  type: PreProduction
+  identifier: NGPipeAuto7nvVVIIqiQ
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
