--- a/.harnessNGPipeAutoaPywRGE2JSfilePath.yaml
+++ b/.harnessNGPipeAutoaPywRGE2JSfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoaPywRGE2JS
-  tags: {}
   name: NGPipeAutoaPywRGE2JS
-  type: PreProduction
+  identifier: NGPipeAutoaPywRGE2JS
+  tags: {
+    }
+  type: Production
