--- a/.harnessNGPipeAutozzVG4tDFC9filePath.yaml
+++ b/.harnessNGPipeAutozzVG4tDFC9filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutozzVG4tDFC9
-  tags: {}
   name: NGPipeAutozzVG4tDFC9
-  type: PreProduction
+  identifier: NGPipeAutozzVG4tDFC9
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
