--- a/.harnessNGPipeAutodM7mhwlfSefilePath.yaml
+++ b/.harnessNGPipeAutodM7mhwlfSefilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutodM7mhwlfSe
-  tags: {}
   name: NGPipeAutodM7mhwlfSe
-  type: PreProduction
+  identifier: NGPipeAutodM7mhwlfSe
+  tags: {
+    }
+  type: Production
