--- a/.harnessNGPipeAuto8oUmcBlwtQfilePath.yaml
+++ b/.harnessNGPipeAuto8oUmcBlwtQfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto8oUmcBlwtQ
-  tags: {}
   name: NGPipeAuto8oUmcBlwtQ
-  type: PreProduction
+  identifier: NGPipeAuto8oUmcBlwtQ
+  tags: {
+    }
+  type: Production
