--- a/.harnessNGPipeAuto0wcjZDMOsDfilePath.yaml
+++ b/.harnessNGPipeAuto0wcjZDMOsDfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto0wcjZDMOsD
-  tags: {}
   name: NGPipeAuto0wcjZDMOsD
-  type: PreProduction
+  identifier: NGPipeAuto0wcjZDMOsD
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
