--- a/.harnessNGPipeAutoGnLW51r9odfilePath.yaml
+++ b/.harnessNGPipeAutoGnLW51r9odfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoGnLW51r9od
-  tags: {}
   name: NGPipeAutoGnLW51r9od
-  type: PreProduction
+  identifier: NGPipeAutoGnLW51r9od
+  tags: {
+    }
+  type: Production
