--- a/.harnessNGPipeAutoRHMr5yKScrfilePath.yaml
+++ b/.harnessNGPipeAutoRHMr5yKScrfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoRHMr5yKScr
-  tags: {}
   name: NGPipeAutoRHMr5yKScr
-  type: PreProduction
+  identifier: NGPipeAutoRHMr5yKScr
+  tags: {
+    }
+  type: Production
