--- a/.harnessNGPipeAuto2WTetIQAlbfilePath.yaml
+++ b/.harnessNGPipeAuto2WTetIQAlbfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto2WTetIQAlb
-  tags: {}
   name: NGPipeAuto2WTetIQAlb
-  type: PreProduction
+  identifier: NGPipeAuto2WTetIQAlb
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
