--- a/.harness/testRemote/pl_auto_pipeline_5DO5t.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_5DO5t.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_5DO5t
-  identifier: pl_auto_pipeline_5DO5t
+unknown:
+  name: pl_auto_unknown_5DO5t
+  identifier: pl_auto_unknown_5DO5t
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
