--- a/.harness/testRemote/pl_auto_environment_kGY9W.yaml
+++ b/.harness/testRemote/pl_auto_environment_kGY9W.yaml
@@ -1,6 +1,7 @@
 environment:
   orgIdentifier: Simlified_Git_sync
   identifier: pl_auto_environment_kGY9W
-  tags: {}
+  tags:  
+    tag: tag
   name: pl_auto_environment_kGY9W
   type: PreProduction
