--- a/.harnessNGPipeAutoXsKaYIV8JbfilePath.yaml
+++ b/.harnessNGPipeAutoXsKaYIV8JbfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoXsKaYIV8Jb
-  tags: {}
   name: NGPipeAutoXsKaYIV8Jb
-  type: PreProduction
+  identifier: NGPipeAutoXsKaYIV8Jb
+  tags: {
+    }
+  type: Production
