--- a/.harnessNGPipeAuto1ygaUkQlXAfilePath.yaml
+++ b/.harnessNGPipeAuto1ygaUkQlXAfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto1ygaUkQlXA
-  tags: {}
   name: NGPipeAuto1ygaUkQlXA
-  type: PreProduction
+  identifier: NGPipeAuto1ygaUkQlXA
+  tags: {
+    }
+  type: Production
