--- a/.harnessNGPipeAutoxXRO5n5EUMfilePath.yaml
+++ b/.harnessNGPipeAutoxXRO5n5EUMfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoxXRO5n5EUM
-  tags: {}
   name: NGPipeAutoxXRO5n5EUM
-  type: PreProduction
+  identifier: NGPipeAutoxXRO5n5EUM
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
