--- a/.harnessNGPipeAutoo0dDp2nW7VfilePath.yaml
+++ b/.harnessNGPipeAutoo0dDp2nW7VfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoo0dDp2nW7V
-  tags: {}
   name: NGPipeAutoo0dDp2nW7V
-  type: PreProduction
+  identifier: NGPipeAutoo0dDp2nW7V
+  tags: {
+    }
+  type: Production
