--- a/.harnessNGPipeAutorfBcvHug6XfilePath.yaml
+++ b/.harnessNGPipeAutorfBcvHug6XfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutorfBcvHug6X
-  tags: {}
   name: NGPipeAutorfBcvHug6X
-  type: PreProduction
+  identifier: NGPipeAutorfBcvHug6X
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
