--- a/.harnessNGPipeAuto390LYNtHHFfilePath.yaml
+++ b/.harnessNGPipeAuto390LYNtHHFfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto390LYNtHHF
-  tags: {}
   name: NGPipeAuto390LYNtHHF
-  type: PreProduction
+  identifier: NGPipeAuto390LYNtHHF
+  tags: {
+    }
+  type: Production
