--- a/.harnessNGPipeAutoLhw6H4aEWhfilePath.yaml
+++ b/.harnessNGPipeAutoLhw6H4aEWhfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoLhw6H4aEWh
-  tags: {}
   name: NGPipeAutoLhw6H4aEWh
-  type: PreProduction
+  identifier: NGPipeAutoLhw6H4aEWh
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
