--- a/.harnessNGPipeAutopAChNKAvpJfilePath.yaml
+++ b/.harnessNGPipeAutopAChNKAvpJfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutopAChNKAvpJ
-  tags: {}
   name: NGPipeAutopAChNKAvpJ
-  type: PreProduction
+  identifier: NGPipeAutopAChNKAvpJ
+  tags: {
+    }
+  type: Production
