--- a/.harnessNGPipeAuto9Ya8fsepaYfilePath.yaml
+++ b/.harnessNGPipeAuto9Ya8fsepaYfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto9Ya8fsepaY
-  tags: {}
   name: NGPipeAuto9Ya8fsepaY
-  type: PreProduction
+  identifier: NGPipeAuto9Ya8fsepaY
+  tags: {
+    }
+  type: Production
