--- a/.harnessNGPipeAutoHFFha2nG04filePath.yaml
+++ b/.harnessNGPipeAutoHFFha2nG04filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoHFFha2nG04
-  tags: {}
   name: NGPipeAutoHFFha2nG04
-  type: PreProduction
+  identifier: NGPipeAutoHFFha2nG04
+  tags: {
+    }
+  type: Production
