--- a/.harnessNGPipeAutoUGMLT4p0qXfilePath.yaml
+++ b/.harnessNGPipeAutoUGMLT4p0qXfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoUGMLT4p0qX
-  tags: {}
   name: NGPipeAutoUGMLT4p0qX
-  type: PreProduction
+  identifier: NGPipeAutoUGMLT4p0qX
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
