--- a/.harnessNGPipeAutop5TLSaF4EPfilePath.yaml
+++ b/.harnessNGPipeAutop5TLSaF4EPfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutop5TLSaF4EP
+  identifier: NGPipeAutop5TLSaF4EP
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcvsFD8BUGTv
-  identifier: NGPipeAutop5TLSaF4EP
-  tags: {}
-  name: NGPipeAutop5TLSaF4EP
-  type: PreProduction
+  tags: {
+    }
+  type: Production
