--- a/.harness/testRemoteTemplate/pl_auto_pipeline_bgRNZ.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_bgRNZ.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added abtoEu
+        description: Desc Added yZKBPh
         type: Approval
         spec:
           execution:
