--- a/.harness/testRemoteTemplate/pl_auto_pipeline_8b6Ll.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_8b6Ll.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added
+        description: Desc Added Eolclm
         type: Approval
         spec:
           execution:
