--- a/.harnessNGPipeAutonPTgIyJaSFfilePath.yaml
+++ b/.harnessNGPipeAutonPTgIyJaSFfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutonPTgIyJaSF
-  tags: {}
   name: NGPipeAutonPTgIyJaSF
-  type: PreProduction
+  identifier: NGPipeAutonPTgIyJaSF
+  tags: {
+    }
+  type: Production
