--- a/.harnessNGPipeAutovKrocbL3N3filePath.yaml
+++ b/.harnessNGPipeAutovKrocbL3N3filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutovKrocbL3N3
-  tags: {}
   name: NGPipeAutovKrocbL3N3
-  type: PreProduction
+  identifier: NGPipeAutovKrocbL3N3
+  tags: {
+    }
+  type: Production
