--- a/.harnessNGPipeAutopqqK7wgS0DfilePath.yaml
+++ b/.harnessNGPipeAutopqqK7wgS0DfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutopqqK7wgS0D
-  tags: {}
   name: NGPipeAutopqqK7wgS0D
-  type: PreProduction
+  identifier: NGPipeAutopqqK7wgS0D
+  tags: {
+    }
+  type: Production
