--- a/.harnessNGPipeAutoNlUDRw5ygJfilePath.yaml
+++ b/.harnessNGPipeAutoNlUDRw5ygJfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoNlUDRw5ygJ
-  tags: {}
   name: NGPipeAutoNlUDRw5ygJ
-  type: PreProduction
+  identifier: NGPipeAutoNlUDRw5ygJ
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
