--- a/.harnessNGPipeAutoP9WktuB3LUfilePath.yaml
+++ b/.harnessNGPipeAutoP9WktuB3LUfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoP9WktuB3LU
-  tags: {}
   name: NGPipeAutoP9WktuB3LU
-  type: PreProduction
+  identifier: NGPipeAutoP9WktuB3LU
+  tags: {
+    }
+  type: Production
