--- a/.harnessNGPipeAutofZR0uTv3ybfilePath.yaml
+++ b/.harnessNGPipeAutofZR0uTv3ybfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutofZR0uTv3yb
-  tags: {}
   name: NGPipeAutofZR0uTv3yb
-  type: PreProduction
+  identifier: NGPipeAutofZR0uTv3yb
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
