--- a/.harnessNGPipeAutokf5TPzTkudfilePath.yaml
+++ b/.harnessNGPipeAutokf5TPzTkudfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutokf5TPzTkud
-  tags: {}
   name: NGPipeAutokf5TPzTkud
-  type: PreProduction
+  identifier: NGPipeAutokf5TPzTkud
+  tags: {
+    }
+  type: Production
