--- a/.harnessNGPipeAuto94yGNp13zsfilePath.yaml
+++ b/.harnessNGPipeAuto94yGNp13zsfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto94yGNp13zs
-  tags: {}
   name: NGPipeAuto94yGNp13zs
-  type: PreProduction
+  identifier: NGPipeAuto94yGNp13zs
+  tags: {
+    }
+  type: Production
