--- a/.harnessNGPipeAutomH4EDSpMxAfilePath.yaml
+++ b/.harnessNGPipeAutomH4EDSpMxAfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutomH4EDSpMxA
-  tags: {}
   name: NGPipeAutomH4EDSpMxA
-  type: PreProduction
+  identifier: NGPipeAutomH4EDSpMxA
+  tags: {
+    }
+  type: Production
