--- a/.harnessNGPipeAutoCOUyPKZvVNfilePath.yaml
+++ b/.harnessNGPipeAutoCOUyPKZvVNfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoCOUyPKZvVN
-  tags: {}
   name: NGPipeAutoCOUyPKZvVN
-  type: PreProduction
+  identifier: NGPipeAutoCOUyPKZvVN
+  tags: {
+    }
+  type: Production
