--- a/.harnessNGPipeAutoFtB6Sre8o4filePath.yaml
+++ b/.harnessNGPipeAutoFtB6Sre8o4filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoFtB6Sre8o4
-  tags: {}
   name: NGPipeAutoFtB6Sre8o4
-  type: PreProduction
+  identifier: NGPipeAutoFtB6Sre8o4
+  tags: {
+    }
+  type: Production
