--- a/.harnessNGPipeAuto9dSslItjhRfilePath.yaml
+++ b/.harnessNGPipeAuto9dSslItjhRfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto9dSslItjhR
-  tags: {}
   name: NGPipeAuto9dSslItjhR
-  type: PreProduction
+  identifier: NGPipeAuto9dSslItjhR
+  tags: {
+    }
+  type: Production
