--- a/.harnessNGPipeAutoLVtjG4J4RsfilePath.yaml
+++ b/.harnessNGPipeAutoLVtjG4J4RsfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoLVtjG4J4Rs
-  tags: {}
   name: NGPipeAutoLVtjG4J4Rs
-  type: PreProduction
+  identifier: NGPipeAutoLVtjG4J4Rs
+  tags: {
+    }
+  type: Production
