--- a/.harnessNGPipeAutoPmh9b3fETdfilePath.yaml
+++ b/.harnessNGPipeAutoPmh9b3fETdfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPmh9b3fETd
-  tags: {}
   name: NGPipeAutoPmh9b3fETd
-  type: PreProduction
+  identifier: NGPipeAutoPmh9b3fETd
+  tags: {
+    }
+  type: Production
