--- a/.harnessNGPipeAuto1EADrxZ8irfilePath.yaml
+++ b/.harnessNGPipeAuto1EADrxZ8irfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto1EADrxZ8ir
-  tags: {}
   name: NGPipeAuto1EADrxZ8ir
-  type: PreProduction
+  identifier: NGPipeAuto1EADrxZ8ir
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
