--- a/.harnessNGPipeAutohzxUn7yxZcfilePath.yaml
+++ b/.harnessNGPipeAutohzxUn7yxZcfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutohzxUn7yxZc
-  tags: {}
   name: NGPipeAutohzxUn7yxZc
-  type: PreProduction
+  identifier: NGPipeAutohzxUn7yxZc
+  tags: {
+    }
+  type: Production
