--- a/.harnessNGPipeAutoHi11LzMqBOfilePath.yaml
+++ b/.harnessNGPipeAutoHi11LzMqBOfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoHi11LzMqBO
-  tags: {}
   name: NGPipeAutoHi11LzMqBO
-  type: PreProduction
+  identifier: NGPipeAutoHi11LzMqBO
+  tags: {
+    }
+  type: Production
