--- a/.harnessNGPipeAutoGdxRiEqjQufilePath.yaml
+++ b/.harnessNGPipeAutoGdxRiEqjQufilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoGdxRiEqjQu
-  tags: {}
   name: NGPipeAutoGdxRiEqjQu
-  type: PreProduction
+  identifier: NGPipeAutoGdxRiEqjQu
+  tags: {
+    }
+  type: Production
