--- a/.harnessNGPipeAutoVe1d7tSVQXfilePath.yaml
+++ b/.harnessNGPipeAutoVe1d7tSVQXfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoVe1d7tSVQX
-  tags: {}
   name: NGPipeAutoVe1d7tSVQX
-  type: PreProduction
+  identifier: NGPipeAutoVe1d7tSVQX
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
