Added Harness Git Experience

--- a/.harness/NgTemplates_XwzhGJtGgEyc8e.yaml
+++ b/.harness/NgTemplates_XwzhGJtGgEyc8e.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgTemplates_XwzhGJtGgEyc8e"
+  name: NgTemplates_XwzhGJtGgEyc8e
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgTemplates_XwzhGJtGgEyc8e"
+  identifier: NgTemplates_XwzhGJtGgEyc8e
   versionLabel: v1
   type: Stage
   tags: {}
