Added Harness Git Experience

--- a/.harness/NgTemplates_JNrIHXfh7qQ7S9.yaml
+++ b/.harness/NgTemplates_JNrIHXfh7qQ7S9.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgTemplates_JNrIHXfh7qQ7S9"
+  name: NgTemplates_JNrIHXfh7qQ7S9
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgTemplates_JNrIHXfh7qQ7S9"
+  identifier: NgTemplates_JNrIHXfh7qQ7S9
   versionLabel: v1
   type: Stage
   tags: {}
