--- a/.harness/NgTemplates_7MKMd0oZU1azCI.yaml
+++ b/.harness/NgTemplates_7MKMd0oZU1azCI.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgTemplates_7MKMd0oZU1azCI"
+  name: NgTemplates_7MKMd0oZU1azCI
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgTemplates_7MKMd0oZU1azCI"
+  identifier: NgTemplates_7MKMd0oZU1azCI
   versionLabel: v1
   type: Stage
   tags: {}
