Added Harness Git Experience

--- a/.harness/NgTemplates_QBBAzeTBCGmFb2.yaml
+++ b/.harness/NgTemplates_QBBAzeTBCGmFb2.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgTemplates_QBBAzeTBCGmFb2"
+  name: NgTemplates_QBBAzeTBCGmFb2
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgTemplates_QBBAzeTBCGmFb2"
+  identifier: NgTemplates_QBBAzeTBCGmFb2
   versionLabel: v1
   type: Stage
   tags: {}
