--- a/.harness/NgTemplates_X0ttaUpJFM0BJT.yaml
+++ b/.harness/NgTemplates_X0ttaUpJFM0BJT.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgTemplates_X0ttaUpJFM0BJT"
+  name: NgTemplates_X0ttaUpJFM0BJT
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgTemplates_X0ttaUpJFM0BJT"
+  identifier: NgTemplates_X0ttaUpJFM0BJT
   versionLabel: v1
   type: Stage
   tags: {}
