Added Harness Git Experience

--- a/.harness/NgTemplates_xxeUuteKuiLErr.yaml
+++ b/.harness/NgTemplates_xxeUuteKuiLErr.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgTemplates_xxeUuteKuiLErr"
+  name: NgTemplates_xxeUuteKuiLErr
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgTemplates_xxeUuteKuiLErr"
+  identifier: NgTemplates_xxeUuteKuiLErr
   versionLabel: v1
   type: Stage
   tags: {}
