--- a/.harnessNGPipeAutoxFHJNWzK3LfilePath.yaml
+++ b/.harnessNGPipeAutoxFHJNWzK3LfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoxFHJNWzK3L
-  tags: {}
   name: NGPipeAutoxFHJNWzK3L
-  type: PreProduction
+  identifier: NGPipeAutoxFHJNWzK3L
+  tags: {
+    }
+  type: Production
