--- a/.harnessNGPipeAutoC1dixVrr1CfilePath.yaml
+++ b/.harnessNGPipeAutoC1dixVrr1CfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoC1dixVrr1C
-  tags: {}
   name: NGPipeAutoC1dixVrr1C
-  type: PreProduction
+  identifier: NGPipeAutoC1dixVrr1C
+  tags: {
+    }
+  type: Production
