--- a/.harnessNGPipeAutosg9VLZttttfilePath.yaml
+++ b/.harnessNGPipeAutosg9VLZttttfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutosg9VLZtttt
-  tags: {}
   name: NGPipeAutosg9VLZtttt
-  type: PreProduction
+  identifier: NGPipeAutosg9VLZtttt
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
