--- a/.harnessNGPipeAutoDWP00u6GpnfilePath.yaml
+++ b/.harnessNGPipeAutoDWP00u6GpnfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoDWP00u6Gpn
+  identifier: NGPipeAutoDWP00u6Gpn
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvckldWgbE9tj
-  identifier: NGPipeAutoDWP00u6Gpn
-  tags: {}
-  name: NGPipeAutoDWP00u6Gpn
-  type: PreProduction
+  tags: {
+    }
+  type: Production
