--- a/.harness/testRemoteTemplate/pl_auto_pipeline_w46cy.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_w46cy.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added 1jfIr0
+        description: Desc Added SOq3gz
         type: Approval
         spec:
           execution:
