--- a/.harnessNGPipeAutoZS7TK9wEAifilePath.yaml
+++ b/.harnessNGPipeAutoZS7TK9wEAifilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoZS7TK9wEAi
-  tags: {}
   name: NGPipeAutoZS7TK9wEAi
-  type: PreProduction
+  identifier: NGPipeAutoZS7TK9wEAi
+  tags: {
+    }
+  type: Production
