--- a/.harnessNGPipeAutoJgGcxctrljfilePath.yaml
+++ b/.harnessNGPipeAutoJgGcxctrljfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoJgGcxctrlj
-  tags: {}
   name: NGPipeAutoJgGcxctrlj
-  type: PreProduction
+  identifier: NGPipeAutoJgGcxctrlj
+  tags: {
+    }
+  type: Production
