--- a/.harnessNGPipeAutoB18qF2O5hXfilePath.yaml
+++ b/.harnessNGPipeAutoB18qF2O5hXfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoB18qF2O5hX
-  tags: {}
   name: NGPipeAutoB18qF2O5hX
-  type: PreProduction
+  identifier: NGPipeAutoB18qF2O5hX
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
