--- a/.harnessNGPipeAutoNtjSrlmuTsfilePath.yaml
+++ b/.harnessNGPipeAutoNtjSrlmuTsfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoNtjSrlmuTs
-  tags: {}
   name: NGPipeAutoNtjSrlmuTs
-  type: PreProduction
+  identifier: NGPipeAutoNtjSrlmuTs
+  tags: {
+    }
+  type: Production
