--- a/.harnessNGPipeAutoD5y6sJG740filePath.yaml
+++ b/.harnessNGPipeAutoD5y6sJG740filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoD5y6sJG740
-  tags: {}
   name: NGPipeAutoD5y6sJG740
-  type: PreProduction
+  identifier: NGPipeAutoD5y6sJG740
+  tags: {
+    }
+  type: Production
