--- a/.harnessNGPipeAutovJ22KzLw7afilePath.yaml
+++ b/.harnessNGPipeAutovJ22KzLw7afilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutovJ22KzLw7a
-  tags: {}
   name: NGPipeAutovJ22KzLw7a
-  type: PreProduction
+  identifier: NGPipeAutovJ22KzLw7a
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
