--- a/.harnessNGPipeAutoLX7RZVlSkcfilePath.yaml
+++ b/.harnessNGPipeAutoLX7RZVlSkcfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoLX7RZVlSkc
-  tags: {}
   name: NGPipeAutoLX7RZVlSkc
-  type: PreProduction
+  identifier: NGPipeAutoLX7RZVlSkc
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
