--- a/.harnessNGPipeAutoxzw2Cee08tfilePath.yaml
+++ b/.harnessNGPipeAutoxzw2Cee08tfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoxzw2Cee08t
+  identifier: NGPipeAutoxzw2Cee08t
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcWY2xwjsdtG
-  identifier: NGPipeAutoxzw2Cee08t
-  tags: {}
-  name: NGPipeAutoxzw2Cee08t
-  type: PreProduction
+  tags: {
+    }
+  type: Production
