--- a/.harnessNGPipeAutoJh3Vw0K9fVfilePath.yaml
+++ b/.harnessNGPipeAutoJh3Vw0K9fVfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoJh3Vw0K9fV
+  identifier: NGPipeAutoJh3Vw0K9fV
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcWY2xwjsdtG
-  identifier: NGPipeAutoJh3Vw0K9fV
-  tags: {}
-  name: NGPipeAutoJh3Vw0K9fV
-  type: PreProduction
+  tags: {
+    }
+  type: Production
