--- a/.harness/testRemoteTemplate/pl_auto_pipeline_tCTMV.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_tCTMV.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added
+        description: Desc Added cbf0hE
         type: Approval
         spec:
           execution:
