--- a/.harnessNGPipeAutolN1x3wU03BfilePath.yaml
+++ b/.harnessNGPipeAutolN1x3wU03BfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutolN1x3wU03B
-  tags: {}
   name: NGPipeAutolN1x3wU03B
-  type: PreProduction
+  identifier: NGPipeAutolN1x3wU03B
+  tags: {
+    }
+  type: Production
