--- a/.harnessNGPipeAuto5r4L1iiOEjfilePath.yaml
+++ b/.harnessNGPipeAuto5r4L1iiOEjfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto5r4L1iiOEj
-  tags: {}
   name: NGPipeAuto5r4L1iiOEj
-  type: PreProduction
+  identifier: NGPipeAuto5r4L1iiOEj
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
