--- a/.harnessNGPipeAutobTSQW8Cds5filePath.yaml
+++ b/.harnessNGPipeAutobTSQW8Cds5filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutobTSQW8Cds5
-  tags: {}
   name: NGPipeAutobTSQW8Cds5
-  type: PreProduction
+  identifier: NGPipeAutobTSQW8Cds5
+  tags: {
+    }
+  type: Production
