--- a/.harnessNGPipeAutoHJTsDU0yv5filePath.yaml
+++ b/.harnessNGPipeAutoHJTsDU0yv5filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoHJTsDU0yv5
-  tags: {}
   name: NGPipeAutoHJTsDU0yv5
-  type: PreProduction
+  identifier: NGPipeAutoHJTsDU0yv5
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
