--- a/.harnessNGPipeAutoTqxrHPUcZ3filePath.yaml
+++ b/.harnessNGPipeAutoTqxrHPUcZ3filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoTqxrHPUcZ3
-  tags: {}
   name: NGPipeAutoTqxrHPUcZ3
-  type: PreProduction
+  identifier: NGPipeAutoTqxrHPUcZ3
+  tags: {
+    }
+  type: Production
