--- a/.harnessNGPipeAutozU4Vn9txFZfilePath.yaml
+++ b/.harnessNGPipeAutozU4Vn9txFZfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutozU4Vn9txFZ
-  tags: {}
   name: NGPipeAutozU4Vn9txFZ
-  type: PreProduction
+  identifier: NGPipeAutozU4Vn9txFZ
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
