--- a/.harnessNGPipeAutoVZ4Ptjs6HEfilePath.yaml
+++ b/.harnessNGPipeAutoVZ4Ptjs6HEfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoVZ4Ptjs6HE
-  tags: {}
   name: NGPipeAutoVZ4Ptjs6HE
-  type: PreProduction
+  identifier: NGPipeAutoVZ4Ptjs6HE
+  tags: {
+    }
+  type: Production
