--- a/.harnessNGPipeAuto5Wwu8DOGU8filePath.yaml
+++ b/.harnessNGPipeAuto5Wwu8DOGU8filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto5Wwu8DOGU8
-  tags: {}
   name: NGPipeAuto5Wwu8DOGU8
-  type: PreProduction
+  identifier: NGPipeAuto5Wwu8DOGU8
+  tags: {
+    }
+  type: Production
