--- a/.harnessNGPipeAuto5EakriXcyAfilePath.yaml
+++ b/.harnessNGPipeAuto5EakriXcyAfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto5EakriXcyA
-  tags: {}
   name: NGPipeAuto5EakriXcyA
-  type: PreProduction
+  identifier: NGPipeAuto5EakriXcyA
+  tags: {
+    }
+  type: Production
