--- a/.harnessNGPipeAuto28XOp35IwvfilePath.yaml
+++ b/.harnessNGPipeAuto28XOp35IwvfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto28XOp35Iwv
-  tags: {}
   name: NGPipeAuto28XOp35Iwv
-  type: PreProduction
+  identifier: NGPipeAuto28XOp35Iwv
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
