--- a/.harnessNGPipeAutoBn5A1ZMUm9filePath.yaml
+++ b/.harnessNGPipeAutoBn5A1ZMUm9filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoBn5A1ZMUm9
-  tags: {}
   name: NGPipeAutoBn5A1ZMUm9
-  type: PreProduction
+  identifier: NGPipeAutoBn5A1ZMUm9
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
