--- a/.harnessNGPipeAutonN2SrCWNj0filePath.yaml
+++ b/.harnessNGPipeAutonN2SrCWNj0filePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutonN2SrCWNj0
+  identifier: NGPipeAutonN2SrCWNj0
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvchy8ZedYSsT
-  identifier: NGPipeAutonN2SrCWNj0
-  tags: {}
-  name: NGPipeAutonN2SrCWNj0
-  type: PreProduction
+  tags: {
+    }
+  type: Production
