--- a/.harnessNGPipeAutomo0rkbKktDfilePath.yaml
+++ b/.harnessNGPipeAutomo0rkbKktDfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutomo0rkbKktD
+  identifier: NGPipeAutomo0rkbKktD
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvchy8ZedYSsT
-  identifier: NGPipeAutomo0rkbKktD
-  tags: {}
-  name: NGPipeAutomo0rkbKktD
-  type: PreProduction
+  tags: {
+    }
+  type: Production
