--- a/.harness/testRemoteTemplate/pl_auto_pipeline_ravZ1.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_ravZ1.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added oOI50I
+        description: Desc Added tkGFJu
         type: Approval
         spec:
           execution:
