--- a/.harnessNGPipeAutoujC4M2T7KwfilePath.yaml
+++ b/.harnessNGPipeAutoujC4M2T7KwfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoujC4M2T7Kw
-  tags: {}
   name: NGPipeAutoujC4M2T7Kw
-  type: PreProduction
+  identifier: NGPipeAutoujC4M2T7Kw
+  tags: {
+    }
+  type: Production
