--- a/.harnessNGPipeAutovPFWy5VSwHfilePath.yaml
+++ b/.harnessNGPipeAutovPFWy5VSwHfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutovPFWy5VSwH
-  tags: {}
   name: NGPipeAutovPFWy5VSwH
-  type: PreProduction
+  identifier: NGPipeAutovPFWy5VSwH
+  tags: {
+    }
+  type: Production
