--- a/.harnessNGPipeAuto3Q28O46PKufilePath.yaml
+++ b/.harnessNGPipeAuto3Q28O46PKufilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto3Q28O46PKu
-  tags: {}
   name: NGPipeAuto3Q28O46PKu
-  type: PreProduction
+  identifier: NGPipeAuto3Q28O46PKu
+  tags: {
+    }
+  type: Production
