--- a/.harnessNGPipeAutoKFrGG52uxYfilePath.yaml
+++ b/.harnessNGPipeAutoKFrGG52uxYfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoKFrGG52uxY
-  tags: {}
   name: NGPipeAutoKFrGG52uxY
-  type: PreProduction
+  identifier: NGPipeAutoKFrGG52uxY
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
