--- a/.harnessNGPipeAutoBn4wMOtQpifilePath.yaml
+++ b/.harnessNGPipeAutoBn4wMOtQpifilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoBn4wMOtQpi
-  tags: {}
   name: NGPipeAutoBn4wMOtQpi
-  type: PreProduction
+  identifier: NGPipeAutoBn4wMOtQpi
+  tags: {
+    }
+  type: Production
