--- a/.harnessNGPipeAutoqRL8jjgda1filePath.yaml
+++ b/.harnessNGPipeAutoqRL8jjgda1filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoqRL8jjgda1
-  tags: {}
   name: NGPipeAutoqRL8jjgda1
-  type: PreProduction
+  identifier: NGPipeAutoqRL8jjgda1
+  tags: {
+    }
+  type: Production
