--- a/.harnessNGPipeAutof34gy4he0dfilePath.yaml
+++ b/.harnessNGPipeAutof34gy4he0dfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutof34gy4he0d
-  tags: {}
   name: NGPipeAutof34gy4he0d
-  type: PreProduction
+  identifier: NGPipeAutof34gy4he0d
+  tags: {
+    }
+  type: Production
