--- a/.harnessNGPipeAutoqXSa9ZZ6IxfilePath.yaml
+++ b/.harnessNGPipeAutoqXSa9ZZ6IxfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoqXSa9ZZ6Ix
-  tags: {}
   name: NGPipeAutoqXSa9ZZ6Ix
-  type: PreProduction
+  identifier: NGPipeAutoqXSa9ZZ6Ix
+  tags: {
+    }
+  type: Production
