--- a/.harnessNGPipeAutoDY8g3qQQxhfilePath.yaml
+++ b/.harnessNGPipeAutoDY8g3qQQxhfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoDY8g3qQQxh
-  tags: {}
   name: NGPipeAutoDY8g3qQQxh
-  type: PreProduction
+  identifier: NGPipeAutoDY8g3qQQxh
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
