--- a/.harnessNGPipeAutoFrOfr85cBRfilePath.yaml
+++ b/.harnessNGPipeAutoFrOfr85cBRfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoFrOfr85cBR
-  tags: {}
   name: NGPipeAutoFrOfr85cBR
-  type: PreProduction
+  identifier: NGPipeAutoFrOfr85cBR
+  tags: {
+    }
+  type: Production
