--- a/.harnessNGPipeAutowuiGGyxLPXfilePath.yaml
+++ b/.harnessNGPipeAutowuiGGyxLPXfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutowuiGGyxLPX
-  tags: {}
   name: NGPipeAutowuiGGyxLPX
-  type: PreProduction
+  identifier: NGPipeAutowuiGGyxLPX
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
