--- a/.harnessNGPipeAutoRA4sYBgweBfilePath.yaml
+++ b/.harnessNGPipeAutoRA4sYBgweBfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoRA4sYBgweB
-  tags: {}
   name: NGPipeAutoRA4sYBgweB
-  type: PreProduction
+  identifier: NGPipeAutoRA4sYBgweB
+  tags: {
+    }
+  type: Production
