--- a/.harnessNGPipeAutoqgKTaZquPLfilePath.yaml
+++ b/.harnessNGPipeAutoqgKTaZquPLfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoqgKTaZquPL
-  tags: {}
   name: NGPipeAutoqgKTaZquPL
-  type: PreProduction
+  identifier: NGPipeAutoqgKTaZquPL
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
