--- a/.harnessNGPipeAutoLIdipIzVbAfilePath.yaml
+++ b/.harnessNGPipeAutoLIdipIzVbAfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoLIdipIzVbA
-  tags: {}
   name: NGPipeAutoLIdipIzVbA
-  type: PreProduction
+  identifier: NGPipeAutoLIdipIzVbA
+  tags: {
+    }
+  type: Production
