--- a/.harnessNGPipeAuto7DaK7dmhOzfilePath.yaml
+++ b/.harnessNGPipeAuto7DaK7dmhOzfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto7DaK7dmhOz
-  tags: {}
   name: NGPipeAuto7DaK7dmhOz
-  type: PreProduction
+  identifier: NGPipeAuto7DaK7dmhOz
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
