--- a/.harnessNGPipeAutoKcKG3zsKolfilePath.yaml
+++ b/.harnessNGPipeAutoKcKG3zsKolfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoKcKG3zsKol
-  tags: {}
   name: NGPipeAutoKcKG3zsKol
-  type: PreProduction
+  identifier: NGPipeAutoKcKG3zsKol
+  tags: {
+    }
+  type: Production
