--- a/.harnessNGPipeAuton6W2WQdbGIfilePath.yaml
+++ b/.harnessNGPipeAuton6W2WQdbGIfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuton6W2WQdbGI
-  tags: {}
   name: NGPipeAuton6W2WQdbGI
-  type: PreProduction
+  identifier: NGPipeAuton6W2WQdbGI
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
