--- a/.harnessNGPipeAutoMth63V7eElfilePath.yaml
+++ b/.harnessNGPipeAutoMth63V7eElfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoMth63V7eEl
-  tags: {}
   name: NGPipeAutoMth63V7eEl
-  type: PreProduction
+  identifier: NGPipeAutoMth63V7eEl
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
