--- a/.harnessNGPipeAutoOLexvmj10lfilePath.yaml
+++ b/.harnessNGPipeAutoOLexvmj10lfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoOLexvmj10l
-  tags: {}
   name: NGPipeAutoOLexvmj10l
-  type: PreProduction
+  identifier: NGPipeAutoOLexvmj10l
+  tags: {
+    }
+  type: Production
