--- a/.harnessNGPipeAutolE7hm6oQjXfilePath.yaml
+++ b/.harnessNGPipeAutolE7hm6oQjXfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutolE7hm6oQjX
-  tags: {}
   name: NGPipeAutolE7hm6oQjX
-  type: PreProduction
+  identifier: NGPipeAutolE7hm6oQjX
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
