--- a/.harnessNGPipeAutoYB8rEsF6LKfilePath.yaml
+++ b/.harnessNGPipeAutoYB8rEsF6LKfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoYB8rEsF6LK
-  tags: {}
   name: NGPipeAutoYB8rEsF6LK
-  type: PreProduction
+  identifier: NGPipeAutoYB8rEsF6LK
+  tags: {
+    }
+  type: Production
