--- a/.harnessNGPipeAutoxfk2XCzz0wfilePath.yaml
+++ b/.harnessNGPipeAutoxfk2XCzz0wfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoxfk2XCzz0w
-  tags: {}
   name: NGPipeAutoxfk2XCzz0w
-  type: PreProduction
+  identifier: NGPipeAutoxfk2XCzz0w
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
