--- a/.harnessNGPipeAutokY1lPmmSc7filePath.yaml
+++ b/.harnessNGPipeAutokY1lPmmSc7filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutokY1lPmmSc7
-  tags: {}
   name: NGPipeAutokY1lPmmSc7
-  type: PreProduction
+  identifier: NGPipeAutokY1lPmmSc7
+  tags: {
+    }
+  type: Production
