a new commit message

--- a/.harness/testRemote/pl_auto_pipeline_xHeHo.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_xHeHo.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_xHeHo
-  identifier: pl_auto_pipeline_xHeHo
+unknown:
+  name: pl_auto_unknown_xHeHo
+  identifier: pl_auto_unknown_xHeHo
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
