--- a/.harness/testRemote/pl_auto_environment_Guqkz.yaml
+++ b/.harness/testRemote/pl_auto_environment_Guqkz.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_Guqkz
   tags: {}
   name: pl_auto_environment_Guqkz
-  type: PreProduction
+  type: Invalid
