a new commit message

--- a/.harness/testRemote/pl_auto_environment_wBxUC.yaml
+++ b/.harness/testRemote/pl_auto_environment_wBxUC.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_wBxUC
   tags: {}
   name: pl_auto_environment_wBxUC
-  type: PreProduction
+  type: Invalid
