--- a/.harnessNGPipeAutoBSX3YVH4iofilePath.yaml
+++ b/.harnessNGPipeAutoBSX3YVH4iofilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoBSX3YVH4io
-  tags: {}
   name: NGPipeAutoBSX3YVH4io
-  type: PreProduction
+  identifier: NGPipeAutoBSX3YVH4io
+  tags: {
+    }
+  type: Production
