--- a/.harnessNGPipeAutoh5m7VUP8IPfilePath.yaml
+++ b/.harnessNGPipeAutoh5m7VUP8IPfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoh5m7VUP8IP
-  tags: {}
   name: NGPipeAutoh5m7VUP8IP
-  type: PreProduction
+  identifier: NGPipeAutoh5m7VUP8IP
+  tags: {
+    }
+  type: Production
