--- a/.harnessNGPipeAutofP3h4Ky8ZHfilePath.yaml
+++ b/.harnessNGPipeAutofP3h4Ky8ZHfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutofP3h4Ky8ZH
-  tags: {}
   name: NGPipeAutofP3h4Ky8ZH
-  type: PreProduction
+  identifier: NGPipeAutofP3h4Ky8ZH
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
