--- a/.harnessNGPipeAutoJGn0V8xGRifilePath.yaml
+++ b/.harnessNGPipeAutoJGn0V8xGRifilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoJGn0V8xGRi
-  tags: {}
   name: NGPipeAutoJGn0V8xGRi
-  type: PreProduction
+  identifier: NGPipeAutoJGn0V8xGRi
+  tags: {
+    }
+  type: Production
