--- a/.harness/testRemote/pl_auto_pipeline_wiaru.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_wiaru.yaml
@@ -1,6 +1,6 @@
 pipeline:
   name: pl_auto_pipeline_wiaru
-  identifier: pl_auto_pipeline_wiaru
+  identifier: pl_auto_pipeline_wiarubla
   projectIdentifier: SimplifiedGitSync_Do_Not_Deleteentifier
   orgIdentifier: Simlified_Git_syncentifier
   tags: { }
