a new commit message

--- a/.harness/testRemote/pl_auto_environment_awZ3f.yaml
+++ b/.harness/testRemote/pl_auto_environment_awZ3f.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_awZ3f
   tags: {}
   name: pl_auto_environment_awZ3f
-  type: PreProduction
+  type: Invalid
