--- a/.harnessNGPipeAutownNQpajw9ofilePath.yaml
+++ b/.harnessNGPipeAutownNQpajw9ofilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutownNQpajw9o
-  tags: {}
   name: NGPipeAutownNQpajw9o
-  type: PreProduction
+  identifier: NGPipeAutownNQpajw9o
+  tags: {
+    }
+  type: Production
