--- a/.harnessNGPipeAutoudxv2ZrQk0filePath.yaml
+++ b/.harnessNGPipeAutoudxv2ZrQk0filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoudxv2ZrQk0
-  tags: {}
   name: NGPipeAutoudxv2ZrQk0
-  type: PreProduction
+  identifier: NGPipeAutoudxv2ZrQk0
+  tags: {
+    }
+  type: Production
