--- a/.harnessNGPipeAutooW5pFGkFUufilePath.yaml
+++ b/.harnessNGPipeAutooW5pFGkFUufilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutooW5pFGkFUu
-  tags: {}
   name: NGPipeAutooW5pFGkFUu
-  type: PreProduction
+  identifier: NGPipeAutooW5pFGkFUu
+  tags: {
+    }
+  type: Production
