--- a/.harnessNGPipeAutojbDENcGMRqfilePath.yaml
+++ b/.harnessNGPipeAutojbDENcGMRqfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutojbDENcGMRq
-  tags: {}
   name: NGPipeAutojbDENcGMRq
-  type: PreProduction
+  identifier: NGPipeAutojbDENcGMRq
+  tags: {
+    }
+  type: Production
