a new commit message

--- a/.harness/testRemote/pl_auto_environment_xHSDo.yaml
+++ b/.harness/testRemote/pl_auto_environment_xHSDo.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_xHSDo
   tags: {}
   name: pl_auto_environment_xHSDo
-  type: PreProduction
+  type: Invalid
