a new commit message

--- a/.harness/testRemote/pl_auto_environment_NgrLU.yaml
+++ b/.harness/testRemote/pl_auto_environment_NgrLU.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_NgrLU
   tags: {}
   name: pl_auto_environment_NgrLU
-  type: PreProduction
+  type: Invalid
