--- a/.harnessNGPipeAutoSktBHktnUsfilePath.yaml
+++ b/.harnessNGPipeAutoSktBHktnUsfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoSktBHktnUs
-  tags: {}
   name: NGPipeAutoSktBHktnUs
-  type: PreProduction
+  identifier: NGPipeAutoSktBHktnUs
+  tags: {
+    }
+  type: Production
