--- a/.harnessNGPipeAutoEbkotbMshHfilePath.yaml
+++ b/.harnessNGPipeAutoEbkotbMshHfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoEbkotbMshH
-  tags: {}
   name: NGPipeAutoEbkotbMshH
-  type: PreProduction
+  identifier: NGPipeAutoEbkotbMshH
+  tags: {
+    }
+  type: Production
