--- a/.harnessNGPipeAutonpu6Fte02BfilePath.yaml
+++ b/.harnessNGPipeAutonpu6Fte02BfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutonpu6Fte02B
-  tags: {}
   name: NGPipeAutonpu6Fte02B
-  type: PreProduction
+  identifier: NGPipeAutonpu6Fte02B
+  tags: {
+    }
+  type: Production
