--- a/.harnessNGPipeAutohfDhuNzk1kfilePath.yaml
+++ b/.harnessNGPipeAutohfDhuNzk1kfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutohfDhuNzk1k
-  tags: {}
   name: NGPipeAutohfDhuNzk1k
-  type: PreProduction
+  identifier: NGPipeAutohfDhuNzk1k
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
