--- a/.harnessNGPipeAutoPGQYtbTIoBfilePath.yaml
+++ b/.harnessNGPipeAutoPGQYtbTIoBfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPGQYtbTIoB
-  tags: {}
   name: NGPipeAutoPGQYtbTIoB
-  type: PreProduction
+  identifier: NGPipeAutoPGQYtbTIoB
+  tags: {
+    }
+  type: Production
