--- a/.harnessNGPipeAutoTqiM12ffTBfilePath.yaml
+++ b/.harnessNGPipeAutoTqiM12ffTBfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoTqiM12ffTB
-  tags: {}
   name: NGPipeAutoTqiM12ffTB
-  type: PreProduction
+  identifier: NGPipeAutoTqiM12ffTB
+  tags: {
+    }
+  type: Production
