--- a/.harnessNGPipeAutoe7Ve6SeAXHfilePath.yaml
+++ b/.harnessNGPipeAutoe7Ve6SeAXHfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoe7Ve6SeAXH
-  tags: {}
   name: NGPipeAutoe7Ve6SeAXH
-  type: PreProduction
+  identifier: NGPipeAutoe7Ve6SeAXH
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
