--- a/.harnessNGPipeAutoes93rcninJfilePath.yaml
+++ b/.harnessNGPipeAutoes93rcninJfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoes93rcninJ
-  tags: {}
   name: NGPipeAutoes93rcninJ
-  type: PreProduction
+  identifier: NGPipeAutoes93rcninJ
+  tags: {
+    }
+  type: Production
