--- a/.harnessNGPipeAutoJG4GWfaQ1QfilePath.yaml
+++ b/.harnessNGPipeAutoJG4GWfaQ1QfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoJG4GWfaQ1Q
-  tags: {}
   name: NGPipeAutoJG4GWfaQ1Q
-  type: PreProduction
+  identifier: NGPipeAutoJG4GWfaQ1Q
+  tags: {
+    }
+  type: Production
