Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_xVAZajxnjaTbHK.yaml
+++ b/.harness/NgRemoteTemplates_xVAZajxnjaTbHK.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_xVAZajxnjaTbHK"
+  name: NgRemoteTemplates_xVAZajxnjaTbHK
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_xVAZajxnjaTbHK"
+  identifier: NgRemoteTemplates_xVAZajxnjaTbHK
   versionLabel: v1
   type: Stage
   tags: {}
