--- a/.harnessNGPipeAutokpqHexSAVsfilePath.yaml
+++ b/.harnessNGPipeAutokpqHexSAVsfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutokpqHexSAVs
-  tags: {}
   name: NGPipeAutokpqHexSAVs
-  type: PreProduction
+  identifier: NGPipeAutokpqHexSAVs
+  tags: {
+    }
+  type: Production
