--- a/.harnessNGPipeAutocM8KEJRKw7filePath.yaml
+++ b/.harnessNGPipeAutocM8KEJRKw7filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutocM8KEJRKw7
-  tags: {}
   name: NGPipeAutocM8KEJRKw7
-  type: PreProduction
+  identifier: NGPipeAutocM8KEJRKw7
+  tags: {
+    }
+  type: Production
