--- a/.harnessNGPipeAutoNkuTRUG13efilePath.yaml
+++ b/.harnessNGPipeAutoNkuTRUG13efilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoNkuTRUG13e
-  tags: {}
   name: NGPipeAutoNkuTRUG13e
-  type: PreProduction
+  identifier: NGPipeAutoNkuTRUG13e
+  tags: {
+    }
+  type: Production
