--- a/.harnessNGPipeAutooo4hDEGkdifilePath.yaml
+++ b/.harnessNGPipeAutooo4hDEGkdifilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutooo4hDEGkdi
-  tags: {}
   name: NGPipeAutooo4hDEGkdi
-  type: PreProduction
+  identifier: NGPipeAutooo4hDEGkdi
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
