--- a/.harnessNGPipeAuto0fOCA5vRkAfilePath.yaml
+++ b/.harnessNGPipeAuto0fOCA5vRkAfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto0fOCA5vRkA
-  tags: {}
   name: NGPipeAuto0fOCA5vRkA
-  type: PreProduction
+  identifier: NGPipeAuto0fOCA5vRkA
+  tags: {
+    }
+  type: Production
