--- a/.harnessNGPipeAutoa8ZhyuqqvSfilePath.yaml
+++ b/.harnessNGPipeAutoa8ZhyuqqvSfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoa8ZhyuqqvS
-  tags: {}
   name: NGPipeAutoa8ZhyuqqvS
-  type: PreProduction
+  identifier: NGPipeAutoa8ZhyuqqvS
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
