--- a/.harness/NgRemoteTemplates_PGA4jFYL08IjYH.yaml
+++ b/.harness/NgRemoteTemplates_PGA4jFYL08IjYH.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_PGA4jFYL08IjYH"
+  name: NgRemoteTemplates_PGA4jFYL08IjYH
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_PGA4jFYL08IjYH"
+  identifier: NgRemoteTemplates_PGA4jFYL08IjYH
   versionLabel: v1
   type: Stage
   tags: {}
