Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_ms7eTK0JPaswIa.yaml
+++ b/.harness/NgRemoteTemplates_ms7eTK0JPaswIa.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_ms7eTK0JPaswIa"
+  name: NgRemoteTemplates_ms7eTK0JPaswIa
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_ms7eTK0JPaswIa"
+  identifier: NgRemoteTemplates_ms7eTK0JPaswIa
   versionLabel: v1
   type: Stage
   tags: {}
