--- a/.harness/NgRemoteTemplates_ZoZhREr1NUYJBR.yaml
+++ b/.harness/NgRemoteTemplates_ZoZhREr1NUYJBR.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_ZoZhREr1NUYJBR"
+  name: NgRemoteTemplates_ZoZhREr1NUYJBR
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_ZoZhREr1NUYJBR"
+  identifier: NgRemoteTemplates_ZoZhREr1NUYJBR
   versionLabel: v1
   type: Stage
   tags: {}
