--- a/.harnessNGPipeAutokcI9iaWx3sfilePath.yaml
+++ b/.harnessNGPipeAutokcI9iaWx3sfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutokcI9iaWx3s
-  tags: {}
   name: NGPipeAutokcI9iaWx3s
-  type: PreProduction
+  identifier: NGPipeAutokcI9iaWx3s
+  tags: {
+    }
+  type: Production
