--- a/.harnessNGPipeAutoDgHNZ7hjLRfilePath.yaml
+++ b/.harnessNGPipeAutoDgHNZ7hjLRfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoDgHNZ7hjLR
-  tags: {}
   name: NGPipeAutoDgHNZ7hjLR
-  type: PreProduction
+  identifier: NGPipeAutoDgHNZ7hjLR
+  tags: {
+    }
+  type: Production
