--- a/.harnessNGPipeAutofdB4M8YuZAfilePath.yaml
+++ b/.harnessNGPipeAutofdB4M8YuZAfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutofdB4M8YuZA
-  tags: {}
   name: NGPipeAutofdB4M8YuZA
-  type: PreProduction
+  identifier: NGPipeAutofdB4M8YuZA
+  tags: {
+    }
+  type: Production
