--- a/.harnessNGPipeAutopX1qedCjkZfilePath.yaml
+++ b/.harnessNGPipeAutopX1qedCjkZfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutopX1qedCjkZ
-  tags: {}
   name: NGPipeAutopX1qedCjkZ
-  type: PreProduction
+  identifier: NGPipeAutopX1qedCjkZ
+  tags: {
+    }
+  type: Production
