--- a/.harnessNGPipeAutoPe9asgB1fzfilePath.yaml
+++ b/.harnessNGPipeAutoPe9asgB1fzfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPe9asgB1fz
-  tags: {}
   name: NGPipeAutoPe9asgB1fz
-  type: PreProduction
+  identifier: NGPipeAutoPe9asgB1fz
+  tags: {
+    }
+  type: Production
