--- a/.harnessNGPipeAutoAr5xgZq0NkfilePath.yaml
+++ b/.harnessNGPipeAutoAr5xgZq0NkfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoAr5xgZq0Nk
-  tags: {}
   name: NGPipeAutoAr5xgZq0Nk
-  type: PreProduction
+  identifier: NGPipeAutoAr5xgZq0Nk
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
