--- a/.harnessNGPipeAutoOSGyvoSrU6filePath.yaml
+++ b/.harnessNGPipeAutoOSGyvoSrU6filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoOSGyvoSrU6
-  tags: {}
   name: NGPipeAutoOSGyvoSrU6
-  type: PreProduction
+  identifier: NGPipeAutoOSGyvoSrU6
+  tags: {
+    }
+  type: Production
