--- a/.harnessNGPipeAutog4wqN1VAFEfilePath.yaml
+++ b/.harnessNGPipeAutog4wqN1VAFEfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutog4wqN1VAFE
-  tags: {}
   name: NGPipeAutog4wqN1VAFE
-  type: PreProduction
+  identifier: NGPipeAutog4wqN1VAFE
+  tags: {
+    }
+  type: Production
