--- a/.harnessNGPipeAutoA7Ci0bPC8EfilePath.yaml
+++ b/.harnessNGPipeAutoA7Ci0bPC8EfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoA7Ci0bPC8E
-  tags: {}
   name: NGPipeAutoA7Ci0bPC8E
-  type: PreProduction
+  identifier: NGPipeAutoA7Ci0bPC8E
+  tags: {
+    }
+  type: Production
