--- a/.harnessNGPipeAutoMR0no6VGHWfilePath.yaml
+++ b/.harnessNGPipeAutoMR0no6VGHWfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoMR0no6VGHW
-  tags: {}
   name: NGPipeAutoMR0no6VGHW
-  type: PreProduction
+  identifier: NGPipeAutoMR0no6VGHW
+  tags: {
+    }
+  type: Production
