--- a/.harnessNGPipeAutogM30gbz2OqfilePath.yaml
+++ b/.harnessNGPipeAutogM30gbz2OqfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutogM30gbz2Oq
-  tags: {}
   name: NGPipeAutogM30gbz2Oq
-  type: PreProduction
+  identifier: NGPipeAutogM30gbz2Oq
+  tags: {
+    }
+  type: Production
