--- a/.harnessNGPipeAutohz8Iy6d2X3filePath.yaml
+++ b/.harnessNGPipeAutohz8Iy6d2X3filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutohz8Iy6d2X3
-  tags: {}
   name: NGPipeAutohz8Iy6d2X3
-  type: PreProduction
+  identifier: NGPipeAutohz8Iy6d2X3
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
