--- a/.harnessNGPipeAutoKwGHa8tlwtfilePath.yaml
+++ b/.harnessNGPipeAutoKwGHa8tlwtfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoKwGHa8tlwt
-  tags: {}
   name: NGPipeAutoKwGHa8tlwt
-  type: PreProduction
+  identifier: NGPipeAutoKwGHa8tlwt
+  tags: {
+    }
+  type: Production
