--- a/.harnessNGPipeAuto4PUh8KWwv2filePath.yaml
+++ b/.harnessNGPipeAuto4PUh8KWwv2filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto4PUh8KWwv2
-  tags: {}
   name: NGPipeAuto4PUh8KWwv2
-  type: PreProduction
+  identifier: NGPipeAuto4PUh8KWwv2
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
