--- a/.harnessNGPipeAutoW46geUakLafilePath.yaml
+++ b/.harnessNGPipeAutoW46geUakLafilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoW46geUakLa
-  tags: {}
   name: NGPipeAutoW46geUakLa
-  type: PreProduction
+  identifier: NGPipeAutoW46geUakLa
+  tags: {
+    }
+  type: Production
