--- a/.harnessNGPipeAutokJd8s9hlz6filePath.yaml
+++ b/.harnessNGPipeAutokJd8s9hlz6filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutokJd8s9hlz6
-  tags: {}
   name: NGPipeAutokJd8s9hlz6
-  type: PreProduction
+  identifier: NGPipeAutokJd8s9hlz6
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
