--- a/.harnessNGPipeAutofO9SLHv3ZFfilePath.yaml
+++ b/.harnessNGPipeAutofO9SLHv3ZFfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutofO9SLHv3ZF
-  tags: {}
   name: NGPipeAutofO9SLHv3ZF
-  type: PreProduction
+  identifier: NGPipeAutofO9SLHv3ZF
+  tags: {
+    }
+  type: Production
