--- a/.harnessNGPipeAutoL9w0PnLMocfilePath.yaml
+++ b/.harnessNGPipeAutoL9w0PnLMocfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoL9w0PnLMoc
-  tags: {}
   name: NGPipeAutoL9w0PnLMoc
-  type: PreProduction
+  identifier: NGPipeAutoL9w0PnLMoc
+  tags: {
+    }
+  type: Production
