--- a/.harnessNGPipeAutofkiOi0ia99filePath.yaml
+++ b/.harnessNGPipeAutofkiOi0ia99filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutofkiOi0ia99
-  tags: {}
   name: NGPipeAutofkiOi0ia99
-  type: PreProduction
+  identifier: NGPipeAutofkiOi0ia99
+  tags: {
+    }
+  type: Production
