--- a/.harnessNGPipeAuto8SgBwJlZdvfilePath.yaml
+++ b/.harnessNGPipeAuto8SgBwJlZdvfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto8SgBwJlZdv
-  tags: {}
   name: NGPipeAuto8SgBwJlZdv
-  type: PreProduction
+  identifier: NGPipeAuto8SgBwJlZdv
+  tags: {
+    }
+  type: Production
