--- a/.harnessNGPipeAutop1EYlKUtwDfilePath.yaml
+++ b/.harnessNGPipeAutop1EYlKUtwDfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutop1EYlKUtwD
-  tags: {}
   name: NGPipeAutop1EYlKUtwD
-  type: PreProduction
+  identifier: NGPipeAutop1EYlKUtwD
+  tags: {
+    }
+  type: Production
