--- a/.harnessNGPipeAutotuLgEwcLW4filePath.yaml
+++ b/.harnessNGPipeAutotuLgEwcLW4filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutotuLgEwcLW4
-  tags: {}
   name: NGPipeAutotuLgEwcLW4
-  type: PreProduction
+  identifier: NGPipeAutotuLgEwcLW4
+  tags: {
+    }
+  type: Production
