--- a/.harnessNGPipeAutoGNlOwzxX2cfilePath.yaml
+++ b/.harnessNGPipeAutoGNlOwzxX2cfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoGNlOwzxX2c
-  tags: {}
   name: NGPipeAutoGNlOwzxX2c
-  type: PreProduction
+  identifier: NGPipeAutoGNlOwzxX2c
+  tags: {
+    }
+  type: Production
