--- a/.harnessNGPipeAuto5vMJCErwhTfilePath.yaml
+++ b/.harnessNGPipeAuto5vMJCErwhTfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto5vMJCErwhT
-  tags: {}
   name: NGPipeAuto5vMJCErwhT
-  type: PreProduction
+  identifier: NGPipeAuto5vMJCErwhT
+  tags: {
+    }
+  type: Production
