--- a/.harnessNGPipeAutoqaXTUNfZpTfilePath.yaml
+++ b/.harnessNGPipeAutoqaXTUNfZpTfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoqaXTUNfZpT
-  tags: {}
   name: NGPipeAutoqaXTUNfZpT
-  type: PreProduction
+  identifier: NGPipeAutoqaXTUNfZpT
+  tags: {
+    }
+  type: Production
