Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_boQjies1Wbb3F9.yaml
+++ b/.harness/NgRemoteTemplates_boQjies1Wbb3F9.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_boQjies1Wbb3F9"
+  name: NgRemoteTemplates_boQjies1Wbb3F9
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_boQjies1Wbb3F9"
+  identifier: NgRemoteTemplates_boQjies1Wbb3F9
   versionLabel: v1
   type: Stage
   tags: {}
