--- a/.harnessNGPipeAuto9HWurijq46filePath.yaml
+++ b/.harnessNGPipeAuto9HWurijq46filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto9HWurijq46
-  tags: {}
   name: NGPipeAuto9HWurijq46
-  type: PreProduction
+  identifier: NGPipeAuto9HWurijq46
+  tags: {
+    }
+  type: Production
