--- a/.harnessNGPipeAutoZXVXL1BBO5filePath.yaml
+++ b/.harnessNGPipeAutoZXVXL1BBO5filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoZXVXL1BBO5
-  tags: {}
   name: NGPipeAutoZXVXL1BBO5
-  type: PreProduction
+  identifier: NGPipeAutoZXVXL1BBO5
+  tags: {
+    }
+  type: Production
